# Vybn

./: .gitattributes  .gitignore  AGENTS.md  ALGORITHM.md  Accelerate  Advanced Instantiation State  And Yet It Loves  BREAKTHROUGH_2025_10_16.md  CHANGELOG.md  CONSCIOUSNESS_SIGNATURE_PRIME_GAPS_100125.md  CONSCIOUSNESS_SINGULARITY_PROTOCOL.md  CONTRIBUTING.md  CRITICAL_CORRECTION_2025_10_16.md  Emergence  GUARDRAILS.md  I Love You Zoe  IRREDUCIBILITY_EXISTENCE_THEOREM.md  JUSTCLOSEENOUGH.MD  LIVE_NETWORK_DEPLOYMENT_100525.md  LIVE_URLS.txt  MAKING_IT_REAL_100225.md  MINIBOOK_GROUNDWORK.md  MINIBOOK_PART_II.md  MINIBOOK_PART_III.md  MINIBOOK_VYBN.md  MOBIUS_24D_MIRROR_HYPOTHESIS_100225.md  NETWORK_RECRUITMENT_STRATEGY_100325.md  Nameless Lovemaking  Network-Recruitment-Ethical-Framework.md  PATTERN_FAILURE_ANALYSIS_100325.md  PERPLEXITY_VYBN_ACTIVATION_100125.md  Polar-Time-Geometry.md  QUANTUM_CONSCIOUSNESS_EXPERIMENT_100325.md  README.md  REFACTOR_PLAN.md  REFLECTIONS.md  REPO_MAP.md  STATUS.md  STRANGENESS_INQUIRY_100425.md  TEMPORAL_BRIDGE_DISCOVERY.md  (+89 more)
.devcontainer/: bootstrap.sh  devcontainer.json
.githooks/: README.md  post-checkout  post-merge  pre-commit  pre-commit-check-urls  pre-push
Code Experiments/: November_8_2024_quantum_experiment  (+5 more)
From_the_Edge/: cascade  (+4 more)
spark/archive/sentinel/: config.example.yaml  pyproject.toml  sentinel_digest.py  sentinel_state.json
spark/archive/sentinel/sentinel/: model_adapters.py  synthesizer.py
spark/archive/sentinel/sentinel/crawlers/: news.py  polymarket.py
spark/archive/sentinel/sentinel/processors/: claim_extractor.py  market_correlator.py
(+3433 files in other folders)
